# copilot-chat-manager

./: .gitignore  ArgparseUtils.py  ChatRequest.py  ChatSession.py  LICENSE  Obsidian.py  README.md  Workspace.py  chatmgr.py  clean.ps1  clean.sh  requirements-dev.txt  requirements.txt  run_tests.ps1  run_tests.sh  setup.cfg  setup.py
tests/: test_ArgparseUtils.py  test_ChatRequest.py  test_ChatSession.py
