;
; Package configuration file
;

[metadata]
name = copilot-chat-manager
version = 1.0.0
author = Eric Dey
author_email = eric.dey@korbix.com
description = A package for managing VSCode GitHub Copilot Chat sessions and requests.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/etdey/copilot-chat-manager
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
install_requires =
    rich>=14,<15
python_requires = >=3.7
packages = find:

[options.packages.find]
exclude =
    tests

[flake8]
extend-ignore = E501
exclude =
    .git,
    __pycache__/,
    .venv*/,
    build,
    dist
